# FISCO_BCOS_FL

./: CMakeLists.txt  README.md  test.py
FLSys/: README.md  fed_loss_result  main_fed.py  main_nn.py  requirements.txt
FLSys/models/: Nets.py  Update.py
FLSys/utils/: __init__.py  experiment_ids.py  file_storage_utils.py  options.py
build_chain_group/: build_chain.sh  ipconf
build_chain_group/console/: deploylog.txt
build_chain_group/console/conf/: sdk.key  sdk.publickey
build_chain_group/nodes/127.0.0.1/: download_console.sh
build_chain_group/nodes/127.0.0.1/node0/: config.ini
build_chain_group/nodes/127.0.0.1/node1/: config.ini
build_chain_group/nodes/127.0.0.1/node10/: config.ini
build_chain_group/nodes/127.0.0.1/node11/: config.ini
build_chain_group/nodes/127.0.0.1/node12/: config.ini
build_chain_group/nodes/127.0.0.1/node13/: config.ini
build_chain_group/nodes/127.0.0.1/node14/: config.ini
build_chain_group/nodes/127.0.0.1/node15/: config.ini
build_chain_group/nodes/127.0.0.1/node16/: config.ini
build_chain_group/nodes/cert/: ca.key  ca.srl
cmake/: ProjectVRF.cmake
cmake/templates/: UserPrecompiled.h.in
console/conf/: ca.crt  sdk.crt  sdk.key
libprecompiled/: CMakeLists.txt
python-sdk/: group2.py  group_test.py  main.py  main1.py  myshow.py  package-lock.json  requirements.txt  test_result.csv
python-sdk/client/: bcosclient.py  ssl_sock_wrap.py
python-sdk/contracts/: CommitteePrecompiled.abi  Group1.sol  Group2.abi  Group2.sol  Group3.sol
python-sdk/utils/: file_storage.py
(+501 files in other folders)
